sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:14: error: not found: value i
			if(!plusPetit(i-1,i+1))
                                      ^AlgGnomeSort:16: error: not found: value i
				echange(i,i+1);
                                        ^