sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {



	var estTrie = false;
	var gnomePos = 1;
	
	

	
		while(gnomePos < getNombreValeurs() - 2)
		{
			if(!plusPetit(i-1,i+1))
			{
				echange(i,i+1);
				gnomePos = gnomePos - 1;
			}
			else
			{
				gnomePos = gnomePos + 1
			}
			
			
		}
	

}
